@@ -104,6 +104,33 @@ try {
     system('find ' . $backup_dir . ' -mtime +' . config::byKey('backup::keepDays') . ' -delete');
     echo __("OK\n", __FILE__);
 
+    echo __('Limite de la taille total des backups à 500mo...', __FILE__);
+    $max_size = 500 * 1024 * 1024;
+    $i = 0;
+    while (getDirectorySize($backup_dir) > $max_size) {
+        $older = array('file' => null, 'datetime' => null);
+        foreach (ls($backup_dir, '*') as $file) {
+            if ($older['datetime'] == null) {
+                $older['file'] = $record_dir . '/' . $file;
+                $older['datetime'] = filemtime($record_dir . '/' . $file);
+            }
+            if ($older['datetime'] > filemtime($record_dir . '/' . $file)) {
+                $older['file'] = $record_dir . '/' . $file;
+                $older['datetime'] = filemtime($record_dir . '/' . $file);
+            }
+        }
+        if ($older['file'] == null) {
+            echo __('Erreur aucun fichier trouver a supprimer alors que le répertoire fait : ' . getDirectorySize($backup_dir), __FILE__);
+        }
+        echo __("\n - Suppression de : ", __FILE__) . $older['file'];
+        unlink($older['file']);
+        $i++;
+        if ($i > 50) {
+            echo __('Plus de 50 backups supprimés. Je m\'arrete', __FILE__);
+        }
+    }
+    echo __("OK\n", __FILE__);
+
     if (config::byKey('backup::cloudUpload') == 1) {
         echo __('Envoi de la sauvegarde dans le cloud...', __FILE__);
         try {
